# MeshmlV1

./: .clang-format  .editorconfig  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .secrets.baseline  FIREBASE-DEPLOYMENT.md  GKE-DEPLOYMENT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-build.yml  pre-commit.yml  publish-worker.yml  security-scan.yml
MeshML-master/: LICENSE  README.md
MeshML-master/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
MeshML-master/.github/workflows/: ci.yml
MeshML-master/dashboard/: .env.development  .env.production  index.html  package.json  tailwind.config.js
MeshML-master/dashboard/src/: App.tsx  index.css
MeshML-master/docker/: docker-compose.yml
MeshML-master/k8s/base/: namespace.yaml  secrets.yaml
MeshML-master/scripts/: init-db.sql
MeshML-master/services/api-gateway/: .env.example  Dockerfile  requirements.txt
k8s/: task-orchestrator.yaml
k8s/base/: api-gateway.yaml  configmap.yaml  dataset-sharder.yaml  metrics-service.yaml  model-registry.yaml  parameter-server.yaml  postgres.yaml  redis.yaml
scripts/: deploy-dashboard.sh  deploy-gke.sh
services/dataset-sharder/: Dockerfile  requirements.txt
services/dataset-sharder/app/: __init__.py  config.py  db.py  grpc_server.py  main.py  models.py
services/dataset-sharder/proto/: dataset_sharder.proto
services/dataset-sharder/tests/: test_grpc_server.py
services/metrics-service/: Dockerfile  pytest.ini  requirements.txt
services/model-registry/: Dockerfile  requirements.txt
services/parameter-server/: Dockerfile  requirements-test.txt  requirements.txt
services/task_orchestrator/: Dockerfile  requirements.txt
tests/: e2e_validation.py
workers/python-worker/: .gitignore  MANIFEST.in  README.md  install.sh  pyproject.toml
workers/python-worker/meshml_worker/: __init__.py  cli.py  config.py  main.py  registration.py
workers/python-worker/meshml_worker/communication/: __init__.py  dataset_sharder_client.py  grpc_client.py  heartbeat.py  http_client.py  metrics_client.py  model_registry_client.py  parameter_server_client.py  task_orchestrator_client.py
workers/python-worker/meshml_worker/training/: dataloader.py  model_loader.py  trainer.py
workers/python-worker/meshml_worker/utils/: checkpoint.py  device.py  logger.py  optimization.py
workers/python-worker/proto/: parameter_server.proto
workers/python-worker/scripts/: generate_protos.py
workers/python-worker/tests/: test_resource_monitor_and_blob_cache.py  test_worker_parameter_server_grpc.py
(+133 files in other folders)
